--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
 /* ========= DYNAMIC CLUB DISCOVERY SYSTEM ========= */
 
 /* ========= 1) CONFIG ========= */
-const SHEET_ID = '1b7QxteWsdr7jByJg63f0WvUYz6KIUFYKrQH9ygqeHmg'; // Your Google Sheet ID
-const TAB_NAME = 'Clubs';
+const SHEET_ID = '1dLYAGkacNmKcSyIoX4p6V9KOansmctifTJwCH-GFLBQ'; // Your Google Sheet ID
+const TAB_NAME = 'Dynamic Club Page Hub';
 const URL      = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${encodeURIComponent(TAB_NAME)}!A:AD?key=AIzaSyDK2LyxRj64ILoXIO37OJyo9qgjWyq18cU`;
 const CACHE_KEY = `clubs:${SHEET_ID}:${TAB_NAME}`;
 const CACHE_TTL_MS = 5 * 60 * 1000; // 5 min
