--- a/club.html
+++ b/club.html
@@ -765,14 +765,19 @@
             margin-top: 15px;
         }
 
-        /* Responsive Design */
+        /* Responsive Design with improved spacing */
         @media (max-width: 768px) {
             .page-container {
                 padding: 15px;
             }
             
             .content-grid {
-                gap: 20px;
+                gap: 30px;
+                margin-bottom: 40px;
+            }
+
+            .collapsible-card {
+                margin-bottom: 30px;
             }
 
             .hero-title {
@@ -849,10 +854,18 @@
             }
         }
 
-        /* Tablet adjustments */
+        /* Tablet adjustments with improved spacing */
         @media (min-width: 769px) and (max-width: 1024px) {
             .page-container {
                 padding: 20px;
+            }
+
+            .content-grid {
+                gap: 35px;
+            }
+
+            .collapsible-card {
+                margin-bottom: 35px;
             }
 
             .stats-grid {
