--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --text:#1c1c1e;
     --text-secondary:#8e8e93;
     --border:#d1d1d6;
-    --radius:3px;              /* Rounded corners = 3px as requested */
+    --radius:3px;              /* Rounded corners = 3px */
     --shadow:0 1px 3px rgba(0,0,0,0.1);
     --shadow-hover:0 4px 12px rgba(0,0,0,0.15);
   }
@@ -142,16 +142,7 @@
   .club-img{ width:100%; height:100%; object-fit:cover; transition:transform 0.3s ease; }
   .club-card:hover .club-img{ transform:scale(1.05); }
 
-  /* ---------- Overlay elements ---------- */
-  .club-website-icon{
-    position:absolute; top:12px; right:12px; width:32px; height:32px;
-    background:rgba(255,255,255,0.9); border-radius:50%;
-    display:flex; align-items:center; justify-content:center;
-    font-size:14px; color:var(--brand); text-decoration:none;
-    box-shadow:0 2px 8px rgba(0,0,0,0.15); transition:all 0.2s ease; z-index:3; backdrop-filter:blur(10px);
-  }
-  .club-website-icon:hover{ background:#fff; transform:scale(1.1); }
-
+  /* ---------- Overlay: rating only (arrow removed) ---------- */
   .club-rating-overlay{
     position:absolute; top:12px; left:12px; font-weight:600; padding:6px 10px;
     border-radius:3px; color:#fff; font-size:14px; min-width:32px; text-align:center;
@@ -306,7 +297,7 @@
 
 <div id="main-content" style="display:none;">
   <div class="club-toolbar">
-    <button class="club-btn" onclick="location.href='https://www.thenbrh.co.uk/'">Home</button>
+    <!-- Home button removed -->
     <button class="club-btn primary" id="open-filter">Filter Clubs</button>
     <button class="club-btn" id="open-sort">Sort</button>
     <button class="club-btn" id="reload">Refresh Data</button>
@@ -414,12 +405,11 @@
   let RAW = [];
   let VIEW = [];
   let SORT = 'default';
-  let FILTERS = {};
 
   function classForScore(score){
     const n = Math.max(0, Math.min(10, Math.round(Number(score)||0)));
     return 'club-score-' + n;
-    }
+  }
 
   function money(n){
     const v = Number(n);
@@ -521,7 +511,7 @@
         <div class="club-img-container">
           <img class="club-img" alt="${c.club_name || 'Club photo'}" src="${img}">
           <div class="${overlayClass}">${isFinite(rating)?rating:0}</div>
-          ${c.page_url ? `<a class="club-website-icon" href="${c.page_url}" target="_blank" rel="noopener" aria-label="Open club website">↗</a>` : ``}
+          <!-- arrow button removed -->
         </div>
         <div class="club-content">
           <h3 class="club-title">${c.club_name || 'Unknown Club'}</h3>
@@ -585,7 +575,7 @@
   els.search.addEventListener('input', ()=>applyFilters());
 
   els.filterOpen.addEventListener('click', ()=>open(els.filterModal));
-  els.openSort && els.sortOpen.addEventListener('click', ()=>open(els.sortModal));
+  els.sortOpen.addEventListener('click', ()=>open(els.sortModal)); // fixed
   els.reload.addEventListener('click', ()=>loadClubData(true));
 
   els.advToggle.addEventListener('click', ()=>{
