--- a/club.html
+++ b/club.html
@@ -20,7 +20,11 @@
   </script>
 
   <style>
-    :root{ --header-h: 72px; }
+    :root{
+      --brand:#FF006E;
+      --brand-dark:#E6005E;
+      --header-h: 64px;
+    }
 
     * { margin:0; padding:0; box-sizing:border-box; }
     body{
@@ -30,30 +34,36 @@
       min-height:100vh;
     }
 
-    /* Fixed NBRH Header */
+    /* Fixed, streamlined NBRH Header */
     .nbrh-header{
+      position:fixed; inset:0 0 auto 0; z-index:1001; width:100%;
       background:#1c1c1e;
-      padding:12px 0;
-      box-shadow:0 2px 10px rgba(0,0,0,0.1);
-      position:fixed; top:0; left:0; right:0; z-index:1001;
-      width:100%;
+      border-bottom:1px solid #2a2a2a;        /* cleaner than shadow */
     }
-    .nbrh-header-content{max-width:1200px; margin:0 auto; padding:0 20px; display:flex; align-items:center; justify-content:space-between;}
+    .nbrh-header-content{
+      max-width:1200px; margin:0 auto; height:var(--header-h);
+      padding:0 20px; display:flex; align-items:center; justify-content:space-between;
+    }
     .nbrh-logo{height:40px; object-fit:contain;}
-    .nbrh-nav{display:flex; gap:20px; align-items:center;}
-    .nbrh-nav a{color:#fff; text-decoration:none; font-weight:500; transition:color .3s;}
-    .nbrh-nav a:hover{color:#FF006E;}
+    .nbrh-nav{display:flex; gap:28px; align-items:center;}
+    .nbrh-nav a{
+      color:#fff; text-decoration:none; font-weight:700;
+      font-size:20px; letter-spacing:.2px;
+      transition:color .2s ease, opacity .2s ease;
+      opacity:.95;
+    }
+    .nbrh-nav a:hover{ color:var(--brand); opacity:1; }
 
-    /* Push content below fixed header (JS updates --header-h to exact height) */
+    /* Push content below fixed header (JS updates --header-h if it changes) */
     .page-container{max-width:1200px; margin:0 auto; padding:calc(var(--header-h) + 16px) 20px 20px; position:relative;}
 
     /* Loading / Error */
     .loading{text-align:center; padding:40px 20px; color:#8e8e93;}
-    .loading-spinner{border:3px solid #f3f3f3; border-top:3px solid #FF006E; border-radius:50%; width:36px; height:36px; animation:spin 1s linear infinite; margin:0 auto 14px;}
+    .loading-spinner{border:3px solid #f3f3f3; border-top:3px solid var(--brand); border-radius:50%; width:36px; height:36px; animation:spin 1s linear infinite; margin:0 auto 14px;}
     @keyframes spin{to{transform:rotate(360deg)}}
     .error{background:#ffeaea; color:#ff3b30; padding:16px; border-radius:3px; margin:16px 0; text-align:center;}
 
-    /* Layout and card spacing (tighter) */
+    /* Layout and card spacing (tight) */
     .content-grid{display:grid; gap:18px; margin-bottom:28px;}
     .card{background:#fff; border-radius:3px; box-shadow:0 3px 14px rgba(0,0,0,0.08); overflow:hidden; transition:transform .25s, box-shadow .25s;}
     .card:hover{transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.12);}
@@ -61,55 +71,58 @@
 
     /* Hero */
     .hero-card{
-      background:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url('https://images.unsplash.com/photo-1552667466-07770ae110d0?auto=format&fit=crop&w=1200&q=80');
+      background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url('https://images.unsplash.com/photo-1552667466-07770ae110d0?auto=format&fit=crop&w=1200&q=80');
       background-size:cover; background-position:center;
       color:#fff; text-align:center; padding:40px 20px;
     }
-    .club-logo{width:80px; height:80px; border-radius:3px; margin:0 auto 16px; background:rgba(255,255,255,.9); display:flex; align-items:center; justify-content:center; font-size:36px; color:#333; font-weight:600; box-shadow:0 4px 12px rgba(0,0,0,0.2); overflow:hidden;}
+    .club-logo{width:80px; height:80px; border-radius:3px; margin:0 auto 16px; background:rgba(255,255,255,.95); display:flex; align-items:center; justify-content:center; font-size:36px; color:#333; font-weight:600; box-shadow:0 4px 12px rgba(0,0,0,0.2); overflow:hidden;}
     .club-logo img{width:100%; height:100%; object-fit:cover;}
     .hero-title{font-size:30px; font-weight:700; margin-bottom:8px;}
-    .hero-subtitle{font-size:18px; opacity:.9; margin-bottom:22px;}
-    .hero-cta{background:#FF006E; color:#fff; border:none; padding:14px 28px; font-size:16px; font-weight:600; border-radius:3px; cursor:pointer; text-decoration:none; display:inline-block; transition:all .25s; box-shadow:0 4px 12px rgba(255,0,110,.3);}
-    .hero-cta:hover{background:#E6005E; transform:translateY(-1px); box-shadow:0 6px 16px rgba(255,0,110,.4);}
+    .hero-subtitle{font-size:18px; opacity:.95; margin-bottom:22px;}
+    .hero-cta{
+      background:var(--brand); color:#fff; border:none; padding:14px 28px; font-size:16px; font-weight:700; border-radius:3px; cursor:pointer; text-decoration:none; display:inline-block; transition:all .25s; box-shadow:0 4px 12px rgba(255,0,110,.3);
+    }
+    .hero-cta:hover{background:var(--brand-dark); transform:translateY(-1px); box-shadow:0 6px 16px rgba(255,0,110,.4);}
 
-    /* Info grid (tighter) */
+    /* Info grid */
     .info-grid{display:grid; grid-template-columns:repeat(auto-fit, minmax(160px,1fr)); gap:8px;}
     .info-item{background:#f8f9fa; border-radius:3px; padding:14px; text-align:center;}
-    .info-icon{font-size:20px; margin-bottom:8px; display:block;}
-    .info-label{font-size:12px; color:#8e8e93; margin-bottom:4px; font-weight:500;}
-    .info-value{font-size:16px; color:#1c1c1e; font-weight:600;}
+    .info-icon{font-size:20px; margin-bottom:8px; display:block; color:var(--brand);}  /* brand pink icons */
+    .info-label{font-size:12px; color:#8e8e93; margin-bottom:4px; font-weight:600;}
+    .info-value{font-size:16px; color:#1c1c1e; font-weight:700;}
     .rating-display{display:flex; align-items:center; justify-content:center; gap:4px; flex-direction:column;}
     .stars{color:#FFD700; font-size:16px; letter-spacing:2px;}
     .rating-number{font-size:13px; color:#8e8e93; margin-top:2px;}
 
     /* Tags */
     .tags-row{display:flex; flex-wrap:wrap; gap:8px; margin-top:12px;}
-    .tag{background:#e8f4fd; color:#007aff; padding:6px 10px; border-radius:3px; font-size:12px; font-weight:500;}
-    .tag.vibe{background:#f0f9ff; color:#0891b2;}
-    .tag.accessibility{background:#f0fdf4; color:#16a34a;}
+    .tag{background:#ffe4f0; color:var(--brand-dark); padding:6px 10px; border-radius:3px; font-size:12px; font-weight:700;}
+    .tag.vibe{background:#ffe9f3; color:var(--brand);}
+    .tag.accessibility{background:#ffe9f3; color:#b3004a;}
 
     /* Section headers */
-    .section-header{font-size:20px; font-weight:700; color:#1c1c1e; margin-bottom:18px; position:relative; padding-bottom:8px;}
-    .section-header::after{content:''; position:absolute; bottom:0; left:0; width:46px; height:4px; background:linear-gradient(90deg,#FF006E,#764ba2); border-radius:3px;}
+    .section-header{font-size:20px; font-weight:800; color:#1c1c1e; margin-bottom:18px; position:relative; padding-bottom:8px;}
+    .section-header::after{content:''; position:absolute; bottom:0; left:0; width:60px; height:4px; background:linear-gradient(90deg,var(--brand),#764ba2); border-radius:3px;}
 
     /* Stats */
     .stats-grid{display:grid; grid-template-columns:repeat(auto-fit, minmax(140px,1fr)); gap:12px;}
     .stat-card{background:#f8f9fa; border-radius:3px; padding:16px; text-align:center;}
-    .stat-number{font-size:22px; font-weight:700; color:#FF006E; display:block; margin-bottom:6px;}
+    .stat-number{font-size:22px; font-weight:800; color:var(--brand); display:block; margin-bottom:6px;}
     .stat-label{font-size:13px; color:#8e8e93;}
 
     /* Sessions */
     .sessions-grid{display:grid; grid-template-columns:repeat(auto-fit, minmax(240px,1fr)); gap:14px;}
     .session-item{background:#f8f9fa; border-radius:3px; padding:16px;}
-    .session-day{font-size:16px; font-weight:600; color:#FF006E; margin-bottom:8px;}
+    .session-day{font-size:16px; font-weight:700; color:var(--brand); margin-bottom:8px;}
     .session-time{font-size:15px; color:#1c1c1e; margin-bottom:4px;}
     .session-type{font-size:13px; color:#8e8e93; font-style:italic;}
 
-    /* Collapsible (testimonials, benefits, FAQ) — fewer wrappers */
+    /* Collapsibles */
     .collapsible-card{}
     .collapsible-header{padding:16px 20px; background:#f8f9fa; border-bottom:1px solid #e5e5ea; cursor:pointer; display:flex; justify-content:space-between; align-items:center;}
-    .collapsible-title{font-size:18px; font-weight:700; color:#1c1c1e;}
-    .collapsible-icon{font-size:16px; color:#8e8e93; transition:transform .25s;}
+    .collapsible-title{font-size:18px; font-weight:800; color:#1c1c1e;}
+    .collapsible-icon{font-size:16px; color:var(--brand); transition:transform .25s;} /* brand colour */
+    .collapsible-header:hover{ background:#fff1f7; } /* subtle brand tint */
     .collapsible-content{max-height:0; overflow:hidden; transition:max-height .4s ease;}
     .collapsible-content.expanded{max-height:2000px;}
     .collapsible-header.expanded .collapsible-icon{transform:rotate(180deg);}
@@ -120,39 +133,44 @@
     .testimonial-rating{display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;}
     .benefits-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:14px;}
     .benefit-item{display:flex; align-items:flex-start; padding:14px; background:#f0f2f5; border-radius:3px;}
-    .benefit-icon{font-size:22px; margin-right:14px; margin-top:3px; color:#007aff;}
+    .benefit-icon{font-size:22px; margin-right:14px; margin-top:3px; color:var(--brand);} /* brand colour */
+
     .faq-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); gap:14px;}
     .faq-item{background:#f0f2f5; border-radius:3px; padding:16px;}
+    /* Bold Qs, non-bold As */
+    .faq-question{font-size:18px; font-weight:800; color:#1c1c1e; margin-bottom:8px;}
+    .faq-answer{font-size:16px; line-height:1.6; color:#666; font-weight:400;}
+    .faq-answer b, .faq-answer strong { font-weight:400 !important; }
 
-    /* About & Coach (Facilities removed) */
+    /* About & Coach */
     .about-card .about-content{display:grid; grid-template-columns:2fr 1fr; gap:20px; align-items:start;}
     .about-text{line-height:1.7; color:#1c1c1e; font-size:16px;}
     .about-sidebar{display:flex; flex-direction:column; gap:16px;}
     .coach-info{background:#f8f9fa; border-radius:3px; padding:16px; display:flex; align-items:center;}
-    .coach-avatar{width:52px; height:52px; border-radius:50%; background:#007aff; color:#fff; display:flex; align-items:center; justify-content:center; font-weight:700; font-size:18px; margin-right:14px;}
-    .coach-details h4{font-size:16px; font-weight:700; color:#1c1c1e; margin-bottom:4px;}
+    .coach-avatar{width:52px; height:52px; border-radius:50%; background:var(--brand); color:#fff; display:flex; align-items:center; justify-content:center; font-weight:800; font-size:18px; margin-right:14px;}
+    .coach-details h4{font-size:16px; font-weight:800; color:#1c1c1e; margin-bottom:4px;}
     .coach-details p{font-size:13px; color:#8e8e93;}
 
-    /* Contact card */
+    /* Contact card (brand icons) */
     .contact-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:12px;}
     .contact-item{background:#f8f9fa; border-radius:3px; padding:16px; text-decoration:none; color:inherit; display:flex; align-items:center;}
-    .contact-icon{width:44px; height:44px; border-radius:3px; background:#007aff; color:#fff; display:flex; align-items:center; justify-content:center; margin-right:12px; font-size:16px;}
-    .contact-info h4{font-size:15px; font-weight:600; color:#1c1c1e; margin-bottom:3px;}
+    .contact-icon{width:44px; height:44px; border-radius:3px; background:var(--brand); color:#fff; display:flex; align-items:center; justify-content:center; margin-right:12px; font-size:16px;}
+    .contact-info h4{font-size:15px; font-weight:700; color:#1c1c1e; margin-bottom:3px;}
     .contact-info p{font-size:13px; color:#8e8e93;}
 
-    /* Sticky Join CTA (centred text) */
+    /* Sticky Join CTA */
     .sticky-cta{
       position:fixed; bottom:20px; left:50%; transform:translateX(-50%);
-      background:#FF006E; color:#fff; border:none; padding:16px 28px;
-      font-size:16px; font-weight:700; border-radius:3px; cursor:pointer;
+      background:var(--brand); color:#fff; border:none; padding:16px 28px;
+      font-size:16px; font-weight:800; border-radius:3px; cursor:pointer;
       box-shadow:0 8px 24px rgba(255,0,110,.35); z-index:1000; display:none;
       text-decoration:none; white-space:nowrap; transition:all .25s;
       display:flex; align-items:center; justify-content:center; text-align:center;
     }
-    .sticky-cta:hover{background:#E6005E; transform:translateX(-50%) translateY(-2px); box-shadow:0 10px 28px rgba(255,0,110,.45);}
+    .sticky-cta:hover{background:var(--brand-dark); transform:translateX(-50%) translateY(-2px); box-shadow:0 10px 28px rgba(255,0,110,.45);}
 
     @media (max-width:768px){
-      .nbrh-header-content{flex-direction:column; gap:10px;}
+      .nbrh-header-content{flex-direction:column; gap:8px; height:auto; padding:10px 16px;}
       .page-container{padding:calc(var(--header-h) + 12px) 15px 15px;}
       .content-grid{gap:14px; margin-bottom:24px;}
       .hero-title{font-size:26px;}
@@ -211,6 +229,11 @@
               <span class="info-icon"><i class="fas fa-map-marker-alt"></i></span>
               <div class="info-label">Location</div>
               <div class="info-value" id="clubLocation">–</div>
+            </div>
+            <div class="info-item" id="audienceBlock" style="display:none;">
+              <span class="info-icon"><i class="fas fa-user-group"></i></span>
+              <div class="info-label">Audience</div>
+              <div class="info-value" id="clubAudience">–</div>
             </div>
             <div class="info-item" id="feeBlock" style="display:none;">
               <span class="info-icon"><i class="fas fa-pound-sign"></i></span>
@@ -456,7 +479,7 @@
       // Hero visuals
       const hero = document.getElementById('heroCard');
       if (d.image_url){
-        hero.style.backgroundImage = `linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url('${d.image_url}')`;
+        hero.style.backgroundImage = `linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url('${d.image_url}')`;
       }else if (d.hero_background_gradient){
         hero.style.backgroundImage = d.hero_background_gradient;
       }
@@ -498,6 +521,13 @@
       // Info grid
       document.getElementById('clubLocation').textContent = d.location || '—';
 
+      // Audience (new)
+      if (d.audience){
+        const ab = document.getElementById('audienceBlock');
+        ab.style.display = '';
+        document.getElementById('clubAudience').textContent = d.audience;
+      }
+
       const feeBlock = document.getElementById('feeBlock');
       const feeText = d.monthly_fee_text || (d.monthly_fee_amount ? `${formatMoney(d.monthly_fee_amount)}/month` : '');
       if (feeText){
@@ -513,7 +543,7 @@
         document.getElementById('starRatingText').textContent = `${n}/5`;
       }
 
-      // Numeric rating (one decimal only, e.g. 2.0)
+      // Numeric rating (one decimal only)
       if (d.numeric_rating !== undefined && d.numeric_rating !== null && d.numeric_rating !== ''){
         const nn = Number(d.numeric_rating) || 0;
         document.getElementById('numericBlock').style.display = '';
@@ -610,7 +640,7 @@
         document.getElementById('benefitsCard').style.display = '';
       }
 
-      // FAQs
+      // FAQs (questions bold, answers normal already enforced in CSS)
       if (Array.isArray(d.faqs) && d.faqs.length){
         const fq = document.getElementById('faqGrid');
         d.faqs.forEach(f=>{
