--- a/club.html
+++ b/club.html
@@ -248,7 +248,7 @@
             </div>
             <div class="info-item" id="numericBlock" style="display:none;">
               <span class="info-icon"><i class="fas fa-chart-line"></i></span>
-              <div class="info-label">Numeric Rating</div>
+              <div class="info-label">User Rating</div>
               <div class="info-value" id="numericRating">–</div>
             </div>
             <div class="info-item" id="membersBlock" style="display:none;">
